--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "neon/ui",
-    "version": "0.1.0-alpha",
+    "version": "0.1.0-alpha-1",
     "description": "",
     "type": "library",
     "license": "MIT",
